# turboscript

./: .gitignore  CMakeLists.txt  README.md  lexer.cpp  main.cpp  readfile.cpp  source.tbs
example/: source.tbs
src/: CMakeLists.txt  lexer.cpp  lexer.h  main.cpp  tokens.h  utils.cpp  utils.h
